--- a/.github/workflows/main_moviefinder.yml
+++ b/.github/workflows/main_moviefinder.yml
@@ -37,6 +37,7 @@ jobs:
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
+        working-directory: recommendation_system
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
